--- a/hal11/public/css/style.css
+++ b/hal11/public/css/style.css
@@ -1,8 +1,14 @@
-@import url();
+@import url(./section.css);
+@import url(./page-nav.css);
+@import url(./header.css);
 
 * {
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
