--- a/hal11/public/css/page-nav.css
+++ b/hal11/public/css/page-nav.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
 
-    right: 2rem;
+    right: max(1.75rem, (100% - 51.75rem) / 2);
     top: 50%;
     transform: translateY(-50%);
 }
@@ -13,6 +13,7 @@ ul {
 
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1.5rem;
 
     list-style: none;
@@ -24,9 +25,9 @@ ul::after {
     z-index: -1;
     background-color: #FD0;
     width: .25rem;
-    height: 90%;
+    height: 95%;
 
-    right: -.75rem;
+    right: -11px;
 }
 
 a {
@@ -35,16 +36,17 @@ a {
 
 .square {
     position: absolute;
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 1.125rem;
+    height: 1.125rem;
     background-color: #FD0;
-    border: solid #FFF .125rem;
+    box-shadow: 0 0 0 .125rem #FFF;
+    /* border: solid #FFF .125rem; */
 
-    transition: .7s ease-in-out;
+    transition: .5s ease-in-out;
 }
 
 [aria-current="true"] .square {
-    transform: rotate(405deg);
+    transform: rotate(135deg);
     background-color: #EC2128;
 }
 
@@ -53,5 +55,5 @@ span:first-child {
     color: #000;
     opacity: 0;
     transition: .2s ease;
-    margin-inline: 1.5rem;
+    margin-right: 1.5rem;
 }
