--- a/hal11/public/css/models.css
+++ b/hal11/public/css/models.css
@@ -8,6 +8,14 @@
     order: -1;
 }
 
-model-viewer {
+.model-viewer {
     background: #FFF;
+    height: 100%; 
+    width: 100%;
+}
+
+img.model-viewer {
+    aspect-ratio: 2 / 1;
+    object-fit: cover;
+    object-position: left;
 }
