--- a/hal11/public/css/style.css
+++ b/hal11/public/css/style.css
@@ -3,6 +3,7 @@
 @import url(./header.css);
 @import url(./contact.css);
 @import url(./models.css);
+@import url(./splash.css);
 
 @font-face {
     font-family: "Bernhard";
